# NuDB

./: .codecov.yml  .drone.star  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Jamroot  README.md  nudb_notes  out.txt
.drone/: before-install.sh  before-script.sh  drone.sh
bench/: CMakeLists.txt  README.md  bench.cpp  plot_bench.py
benchmark/: CMakeLists.txt  README.md  benchmark.cpp
doc/: Dockerfile  Jamfile  Jamfile.v2  README.md  example.qbk  helper.qbk  intro.qbk  introduction.qbk  main.qbk  makeqbk.sh  master.qbk  overview.qbk  quickref.xml  reference.xsl  source.dox  store.qbk  tool.qbk  usage.qbk
doc/images/: logo.psd
doc/type_requirements/: File.qbk  Hasher.qbk  Progress.qbk
doc/types/: File.qbk  Hasher.qbk  Progress.qbk  error_code.qbk  store.qbk  verify_info.qbk
examples/: CMakeLists.txt  Jamfile  crash.cpp  example.cpp  recover.cpp
extras/: README.md
extras/nudb/test/: fail_file.hpp  temp_dir.hpp  test_store.hpp
include/: nudb.hpp
include/nudb/: CMakeLists.txt  api.hpp  basic_store.hpp  common.hpp  concepts.hpp  context.hpp  create.hpp  erase_file.hpp  error.hpp  error_code.hpp  file.hpp  identity.hpp  native_file.hpp  nudb.hpp  posix_file.hpp  progress.hpp  recover.hpp  rekey.hpp  store.hpp  type_traits.hpp  verify.hpp  version.hpp  visit.hpp  win32_file.hpp  xxhasher.hpp
include/nudb/_experimental/: basic_seconds_clock.hpp  chrono_util.hpp  util.hpp
include/nudb/_experimental/test/: test_store.hpp
include/nudb/detail/: arena.hpp  bucket.hpp  buffer.hpp  bulkio.hpp  cache.hpp  field.hpp  format.hpp  gentex.hpp  pool.hpp  store_base.hpp  stream.hpp  varint.hpp
include/nudb/impl/: basic_store.ipp  context.ipp  create.ipp  error.ipp  file.ipp  posix_file.ipp  recover.ipp  rekey.ipp  verify.ipp  visit.ipp  win32_file.ipp
scripts/: NuDBConfig.cmake  build-and-test.sh  install-boost.sh  install-cmake.sh  install-coverage.sh  install-dependencies.sh  install-valgrind.sh  setup-msvc.sh  valgrind.supp
test/: CMakeLists.txt  Jamfile  api.cpp  basic_store.cpp  buffer.cpp  callgrind_test.cpp  common.cpp  context.cpp  create.cpp  error.cpp  fail_file.hpp  identity.cpp  main.cpp  recover.cpp  recover_test.cpp  rekey.cpp  store.cpp  store_test.cpp  suite.hpp  temp_dir.hpp  test_util.hpp  varint_test.cpp  verify.cpp  verify_test.cpp  visit.cpp  xor_shift_engine.hpp  xxhasher.hpp
tool/: CMakeLists.txt  basic_seconds_clock.hpp  chrono_util.h  chrono_util.hpp  nudb.cpp  util.hpp
tools/: CMakeLists.txt  nudb.cpp
